all: a bunch of css fixes

--- a/web/src/assets/index.css
+++ b/web/src/assets/index.css
@@ -52,6 +52,12 @@
 @layer base {
   * {
     @apply border-border;
+    @apply text-base;
+  }
+  a {
+    &:hover {
+      @apply text-hover-base;
+    }
   }
   body {
     @apply bg-background text-foreground;
